Bug 270277 - Ktorrent shouldnt give the user the ability to configure all icons sizes?
Summary: Ktorrent shouldnt give the user the ability to configure all icons sizes?
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-07 06:22 UTC by
Modified: 2011-04-16 11:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2011-04-07 06:22:03 UTC
Version:           unspecified (using Devel) 
OS:                Linux

In Ktorrent only the toolbar icons can be cofigured to a different size, and isnt possible to configure the icon size to all the restant sizes that appear in ktorrent window.

Reproducible: Didn't try




OS: Linux (x86_64) release 2.6.36.2-desktop-2mnb
Compiler: gcc
Comment 1 Joris Guisson 2011-04-08 10:18:02 UTC
Icon sizes are global KDE settings, they should be changed in the system settings
Comment 2 2011-04-08 10:47:46 UTC
So you need to verify better and fix ktorrent code, since i have in systemsettings that all toolbar icons to have sixe 16x16 an that does not happen with ktorrent.
Comment 3 Joris Guisson 2011-04-08 11:16:41 UTC
Then set the icon size in ktorrent to default
Comment 4 2011-04-08 11:58:47 UTC
Likw i said in first comment, i wasnt just refering to the main toolbar icons, i was refering to all ktorrent icons, including bottom icons, like "Magnet", "Status", etc.
Comment 5 Joris Guisson 2011-04-16 11:23:28 UTC
Git commit 3323ce5570a4952ec399061569866174ed3b6ad3 by Joris Guisson.
Committed on 16/04/2011 at 11:30.
Pushed by guisson into branch 'master'.

Make tabbar widget icons follow KDE size changes

BUG: 270277

M  +1    -0    ChangeLog     
M  +17   -1    libktcore/gui/tabbarwidget.cpp     
M  +2    -0    libktcore/gui/tabbarwidget.h     

http://commits.kde.org/ktorrent/3323ce5570a4952ec399061569866174ed3b6ad3
Comment 6 Joris Guisson 2011-04-16 11:24:23 UTC
Git commit 88c61fecbe819a457100aba6d97611e5a8fd4070 by Joris Guisson.
Committed on 16/04/2011 at 11:30.
Pushed by guisson into branch '4.1'.

Backport to 4.1: Make tabbar widget icons follow KDE size changes

CCBUG: 270277

M  +1    -0    ChangeLog     
M  +17   -1    libktcore/gui/tabbarwidget.cpp     
M  +2    -0    libktcore/gui/tabbarwidget.h     

http://commits.kde.org/ktorrent/88c61fecbe819a457100aba6d97611e5a8fd4070