Make tabbar widget icons follow KDE size changes

BUG: 270277